menambahkan project baru

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <!-- row -->
 
             <div class="row">
-
+                <!-- project 1 -->
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
                         <img src="assets/imgs/project/1. Tampilan awal SPK.png" class="portfolio-card-img">
@@ -255,6 +255,7 @@
                         </span>
                     </a>
                 </div>
+                <!-- project 2 -->
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/project/1. Tampilan awal.png"
@@ -280,6 +281,40 @@
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/project/4. Halaman Genre.png"
+                            class="img-responsive rounded border-dark">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Halaman Pengolahan Data</h5>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- project 3 -->
+                <div class="col-md-4">
+                    <a href="#" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/project/index_pma.png"
+                            class="img-responsive rounded">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Website Project Management App</h5>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/project/dashboard_pma.png"
+                            class="img-responsive rounded">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Halaman Dashboard</h5>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/project/project_pma.png"
                             class="img-responsive rounded border-dark">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
